// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders blog index 1`] = `
<div>
  <Header
    location={
      Object {
        "hash": "",
        "pathname": "/blog/index.md",
        "search": "",
      }
    }
    setSearchResults={[Function]}
  />
  <div>
    <BlogHero
      blogHero={null}
      index="index"
      location={
        Object {
          "hash": "",
          "pathname": "/blog/index.md",
          "search": "",
        }
      }
      markdown={
        Object {
          "blog/index.md": [Function],
          "blog/page.md": [Function],
          "firstPage": [Function],
          "firstPagePath": "firstPage",
          "foo": [Function],
          "home.md": [Function],
          "index": [Function],
        }
      }
      plugins={Array []}
    />
    <div
      className="columns"
    >
      <div
        className="column content is-two-thirds-tablet is-three-quarters-desktop"
      >
        <Unknown
          plugins={Array []}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`App renders blog page 1`] = `
<div>
  <Header
    location={
      Object {
        "hash": "",
        "pathname": "/blog/page.md",
        "search": "",
      }
    }
    setSearchResults={[Function]}
  />
  <div>
    <BlogHero
      blogHero={null}
      index="index"
      location={
        Object {
          "hash": "",
          "pathname": "/blog/page.md",
          "search": "",
        }
      }
      markdown={
        Object {
          "blog/index.md": [Function],
          "blog/page.md": [Function],
          "firstPage": [Function],
          "firstPagePath": "firstPage",
          "foo": [Function],
          "home.md": [Function],
          "index": [Function],
        }
      }
      plugins={Array []}
    />
    <div
      className="columns"
    >
      <div
        className="column content is-two-thirds-tablet is-three-quarters-desktop"
      >
        <Unknown
          plugins={Array []}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`App renders first page at index if found 1`] = `
<div>
  <Header
    location={
      Object {
        "hash": "#foo",
        "pathname": "/",
      }
    }
    setSearchResults={[Function]}
  />
  <div
    className=""
    id="root"
  >
    <div
      className="columns"
    >
      <OnClickOutside(Sidebar)
        className="column is-one-third-tablet is-one-quarter-desktop box"
        content={[Function]}
        currentPage="/#foo"
        eventTypes={
          Array [
            "mousedown",
            "touchstart",
          ]
        }
        excludeScrollbar={false}
        outsideClickIgnoreClass="ignore-react-onclickoutside"
        preventDefault={false}
        stopPropagation={false}
      />
      <div
        className="column content is-two-thirds-tablet is-three-quarters-desktop"
      >
        <Page
          plugins={Array []}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`App renders home page 1`] = `
<div>
  <Header
    location={
      Object {
        "pathname": "/",
      }
    }
    setSearchResults={[Function]}
  />
  <home
    plugins={Array []}
  />
</div>
`;

exports[`App renders matched page 1`] = `
<div>
  <Header
    location={
      Object {
        "pathname": "/foo",
      }
    }
    setSearchResults={[Function]}
  />
  <div
    className=""
    id="root"
  >
    <div
      className="columns"
    >
      <OnClickOutside(Sidebar)
        className="column is-one-third-tablet is-one-quarter-desktop box"
        content={[Function]}
        currentPage="/foo"
        eventTypes={
          Array [
            "mousedown",
            "touchstart",
          ]
        }
        excludeScrollbar={false}
        outsideClickIgnoreClass="ignore-react-onclickoutside"
        preventDefault={false}
        stopPropagation={false}
      />
      <div
        className="column content is-two-thirds-tablet is-three-quarters-desktop"
      >
        <foo
          plugins={Array []}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`determineComponents render matching index file and first page if path not found 1`] = `
<ul>
   Folder Links 
</ul>
`;

exports[`determineComponents render matching index file and first page if path not found 2`] = `
<p>
   Folder First 
</p>
`;

exports[`determineComponents render matching index file in subpath 1`] = `
<ul>
   Folder Links 
</ul>
`;

exports[`determineComponents render matching index file in subpath 2`] = `
<p>
   foo 
</p>
`;

exports[`determineComponents render matching page if found 1`] = `
<ul>
  List of Links
</ul>
`;

exports[`determineComponents render matching page if found 2`] = `
<p>
   foo 
</p>
`;

exports[`determineComponents render matching subpath index file and first page if path not found 1`] = `
<ul>
   Folder Links 
</ul>
`;

exports[`determineComponents render matching subpath index file and first page if path not found 2`] = `
<h1>
   First Page 
</h1>
`;

exports[`determineComponents renders first page if it exists and no pages found 1`] = `
<ul>
  List of Links
</ul>
`;

exports[`determineComponents renders first page if it exists and no pages found 2`] = `
<h1>
   First Page 
</h1>
`;

exports[`determineComponents renders matching index file if filePath matches index filename pattern 1`] = `
<ul>
  List of Links
</ul>
`;

exports[`determineComponents renders matching index file if filePath matches index filename pattern 2`] = `
<h1>
   First Page 
</h1>
`;

exports[`determineComponents renders root index if no matching subPath first page found 1`] = `
<ul>
  List of Links
</ul>
`;

exports[`determineComponents renders root index if no matching subPath first page found 2`] = `
<h1>
   First Page 
</h1>
`;
